2003-11-19  Carl Worth  <cworth@isi.edu>

	* xcompmgr.c: Eliminate several compiler warnings: missing
	includes, static functions, unused variables.  Remove confusing
	informational messages with the word "error" in them.

2003-11-14  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (main):
	Eliminate all delays in updates; let the X server scheduling
	handle things.

2003-11-13  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c:
	Reduce scheduling latency to 10ms

2003-11-13  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (make_gaussian_map), (sum_gaussian), (make_shadow),
	(shadow_picture), (paint_all), (main):
	Use an alpha map instead of an ARGB picture for shadows.
	Update last_update only when actually updating windows.

2003-11-11  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (win_extents), (paint_all), (add_win), (main):
	Detect ARGB windows, don't give them shadows, compose them
	correctly.

2003-11-10  Keith Packard  <keithp@keithp.com>

	* Makefile:
	* xcompmgr.c: (root_tile), (main):
	Track changes to _XROOTPMAP_ID property

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (time_in_millis), (main):
	Add a bit of scheduling to updates; update every 30 ms
	instead of waiting for more events.  Smooths out window moving.
	Interval needs to be configurable probably.

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (root_tile):
	Make sure _XROOTPMAP_ID property is right type, format and length
	before attempting to use the resulting value.

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (configure_win):
	Configure damage must include shadow region, not just window.
	Also, leaking region on each configure.

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (main):
	oops.  Left in an XSynchronize call.

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (paint_root), (paint_all), (map_win), (add_win),
	(configure_win), (destroy_win), (main):

	Double buffer updates.